Completed Initial Changes

--- a/mta.yaml
+++ b/mta.yaml
@@ -43,6 +43,8 @@ modules:
       keep-existing-routes: true
       disk-quota: 256M
       memory: 256M
+    build-parameters:
+      ignore: ["default-env.json",'.env']
     requires:
       - name: srv-api
         group: destinations
@@ -60,7 +62,7 @@ resources:
       service-plan: application
       path: ./xs-security.json
       config:
-        xsappname: MyHANAApp-${org}-${space}
+        xsappname: myhanaapp
         tenant-mode: dedicated
   - name: MyHANAApp-db
     type: com.sap.xs.hdi-container
